# python-intermediate-inflammation

./: .gitignore  .pylintrc  README.md  inflammation-analysis.py  inflammation_analysis.py  pyproject.toml  requirements.txt
inflammation/: models.py
tests/: test_models.py
